# ONNX-Runtime-GPU-image-classifciation-example

./: CMakeLists.txt  LICENSE.md  README.md
models/: image_classifier.onnx  image_classifier.pth
scripts/: export2onnx.py  model.py  test.py  train.py
src/: CMakeLists.txt  image_classifier.cpp  image_classifier.h  main.cpp
